<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<LinearLayout
		android:id="@+id/listHeader"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<TextView
			android:id="@+id/text1"
	    	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textAppearance="@android:style/TextAppearance.Medium"
	        android:visibility="gone" />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center">
			<LinearLayout
				android:id="@+id/score_wrapper"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:gravity="center_vertical">

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1.0">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/total_score"
						android:paddingRight="5dip"
						android:textAppearance="@android:style/TextAppearance.Medium" />
				    <TextView
				        android:id="@+id/total_score"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:textAppearance="@android:style/TextAppearance.Medium" />
		        </LinearLayout>

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="vertical">
			        <Button
				    	android:id="@+id/detailsButton"
				    	android:layout_width="fill_parent"
				    	android:layout_height="wrap_content"
				    	android:text="@string/details"
				    	android:visibility="gone" />

			    	<!-- <Button
			    		android:id="@+id/sendResultsButton"
			    		android:layout_width="fill_parent"
			    		android:layout_height="wrap_content"
			    		android:text="@string/send_results" /> -->
		    	</LinearLayout>
	        </LinearLayout>
	    </LinearLayout>
	</LinearLayout>

	<ListView
		android:id="@+id/list"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1.0"
		android:background="#00000000"
		android:cacheColorHint="#00000000"
		android:scrollingCache="false" />

	<LinearLayout
		android:id="@+id/emptyListView"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:gravity="center">
		<Button
			android:id="@+id/startButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/start_questionare" />
	</LinearLayout>

</LinearLayout>
